--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>test</title>
+    <title>Train Railway Map Navigation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
       rel="stylesheet"
     />
     <!-- START OF LEAFLET IMPORT -->
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin=""0
+      crossorigin="0"
       rel="preload"
     />
     <!-- Make sure you put this AFTER Leaflet's CSS -->
@@ -34,6 +34,15 @@
         <div class="map" id="map"></div>
       </div>
     </div>
+
+    <!-- Controls to input station and display route -->
+    <div id="controls" class="controls">
+      <label for="stationInput">Enter Destination Station:</label>
+      <input type="text" id="stationInput" placeholder="e.g., Sapporo Station">
+      <button id="findRouteButton">Find Route</button>
+      <div id="routeInstructions"></div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
